# AutoWriter-

./: README.md  pyproject.toml
app/: config.py  main.py
app/agents/: news_agent.py  post_generator.py  prompts.py
app/api/: routes.py
app/models/: news_model.py  post_model.py
app/schema/: news.py  post_schema.py
app/tests/: test_api.py
app/utils/: logger.py
