[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.6.0",
    "fastapi>=0.117.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.12",
    "langgraph>=0.6.7",
    "logging>=0.4.9.6",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "uvicorn[standard]>=0.37.0",
]
